--- a/me.html
+++ b/me.html
@@ -7,5 +7,6 @@
 	</head>
 	<body>
 		<h1> i am head 1 on my body is it correct? </h1>
+		<p> this is paragraph i want to commit now</p.
 	</body>
 </html>
